2012-01-12  Vanessa Gil  <vanessa.gil@artica.es>
	* pandoradb.oracle.sql
	  pandoradb.postgreSQL.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql: Changes in group
	fields of netflow tables.

2012-01-12  Vanessa Gil  <vanessa.gil@artica.es>
	* godmode/netflow/nf_report_item.php
	  include/functions_netflow.php: changes netflow groups.

2012-01-12  Ramon Novoa  <rnovoa@artica.es>

	* include/graphs/functions_fsgraph.php: Fixed empty chart detection for
	  flash charts.

2012-01-12  Vanessa Gil  <vanessa.gil@artica.es>
	  godmode/netflow/nf_edit.php
	  godmode/netflow/nf_report.php
	  godmode/netflow/nf_report_form.php
	  godmode/netflow/nf_report_item.php
	  include/functions_netflow.php
	  operation/netflow/nf_view.php
	  operation/netflow/nf_reporting.php: changes netflow acl.

2012-01-12  Junichi Satoh  <junichi@rworks.jp>

	* godmode/admin_access_logs.php: Fixed user filtering does not work.

2012-01-11  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_netflow.php,
	  operation/netflow/nf_view.php: Fixed netflow raw data tables.

2012-01-11  Vanessa Gil  <vanessa.gil@artica.es>
	  godmode/netflow/nf_edit_form.php
	  godmode/netflow/nf_report.php
	  godmode/netflow/nf_report_form.php
	  godmode/netflow/nf_report_item.php
	  include/functions_netflow.php
	  operation/netflow/nf_view.php: netflow acl.

2012-01-11  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_graph.php,
	  include/functions_netflow.php,
	  operation/netflow/nf_view.php: Fixed netflow stacked charts. Moved
	  code from nf_view to functions in functions_netflow. Several other
	  fixes.

2012-01-11  Sancho Lerena <slerena@artica.es>

	*  images/status_sets/color_text/*.png: Updated icons missing
	for this iconset.

2012-01-11  Vanessa Gil  <vanessa.gil@artica.es>
	* pandoradb.sql
	  godmode/netflow/nf_edit_form.php
	  godmode/netflow/nf_edit.php