@@ -1,4 +1,8 @@
 2012-01-12  Vanessa Gil  <vanessa.gil@artica.es>
+	* include/functions_graph.php
+	  include/functions_netflow.php: translate netflow titles.
+
+2012-01-12  Vanessa Gil  <vanessa.gil@artica.es>
 	* pandoradb.oracle.sql
 	  pandoradb.postgreSQL.sql
 	  extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
